# engine

./: .dockerignore  .gitignore  AGENTS.md  ATTRIBUTION.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md  deny.toml  skills.lock.yaml
.agents/skills/agentmem-onboarding/: SKILL.md
.agents/skills/rust-skills/: NOTICE
.agents/skills/web-static-frontend/: SKILL.md
.github/workflows/: cargo-deny.yml  docker-validation.yml  eval-gate.yml  serve-validation.yml  simulator-validation.yml
data/catalogs/: README.md  hyg_v3.sample.csv  hyg_v3.source.env
data/celestial/: .provenance  README.md
data/input/: README.md
data/samples/sky-samples/: .gitignore  ATTRIBUTION.md  GROUND-TRUTH.md  README.md  fetch_sample.py  manifest.json  solve_wcs.py
data/samples/sky-samples/ground-truth/: eso_cerro_armazones.wcs.json  flickr_cygnus_fermion.wcs.json  flickr_m41_donatiello.wcs.json  flickr_orion_rahn.wcs.json  tetra3_alt40.wcs.json  tetra3_alt60.wcs.json  wm_constellation_orion.wcs.json
docs/: README.md  app.md  data-catalog.md  data-contracts.md  data-sources.md  evaluation.md  overview.md  phase0.md  presentation.html  recognizer.md  roadmap.md  serve.md  simulator.md  stack.md
openspec/: config.yaml
openspec/changes/archive/2026-04-15-roadmap-phase-1-dataset-v1/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-07-roadmap-phase-2-solver-v1/: design.md
openspec/changes/archive/2026-07-07-stage-0-prototype-v1/: design.md  proposal.md  tasks.md
openspec/changes/roadmap-phase-2-solver-v1/: proposal.md  tasks.md
openspec/changes/roadmap-phase-2-solver-v1/specs/solver-benchmark-harness/: spec.md
openspec/changes/roadmap-phase-2-solver-v1/specs/solver-pose-estimation/: spec.md
openspec/specs/simulator-camera-projection/: spec.md
openspec/specs/simulator-dataset-generation/: spec.md
openspec/specs/simulator-star-rendering/: spec.md
openspec/specs/simulator-validation/: spec.md
openspec/specs/solver-benchmark-harness/: spec.md
openspec/specs/solver-engine-database/: spec.md
openspec/specs/solver-http-service/: spec.md
openspec/specs/solver-image-input/: spec.md
openspec/specs/solver-overlay-debug/: spec.md
openspec/specs/solver-pattern-matching/: spec.md
openspec/specs/solver-pose-estimation/: spec.md
openspec/specs/solver-star-detection/: spec.md
openspec/specs/solver-telemetry/: spec.md
prototype/: .gitignore  Cargo.toml  Makefile  README.md  deny.toml
prototype/apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
prototype/apps/desktop/capabilities/: default.json
prototype/apps/desktop/permissions/autogenerated/: data_attribution.toml  image_png.toml  load_image.toml  pick_image.toml  solve_image.toml  startup_request.toml
prototype/apps/desktop/src/: commands.rs  main.rs  paths.rs  state.rs
prototype/apps/desktop/ui/: index.html  styles.css
prototype/apps/desktop/ui/js/: ipc.js  main.js  viewer.js
prototype/crates/dataset-cli/: Cargo.toml
prototype/crates/dataset-cli/src/: main.rs
prototype/crates/simulator-core/: Cargo.toml
prototype/crates/simulator-core/src/: camera.rs  catalog.rs  config.rs  dataset.rs  degradations.rs  lib.rs  projection.rs  rendering.rs  rng.rs  sampling.rs
prototype/crates/simulator-core/tests/: dataset_generation.rs  golden_rendering.rs  reproducibility.rs
prototype/crates/simulator-core/tests/fixtures/: golden_cases.json
prototype/crates/solver-cli/: Cargo.toml
prototype/crates/solver-cli/src/: main.rs
prototype/crates/solver-core/: Cargo.toml
prototype/crates/solver-core/src/: benchmark.rs  config.rs  contracts.rs  detection.rs  io.rs  lib.rs  matching.rs  overlay.rs  pipeline.rs  pose.rs
prototype/crates/solver-core/tests/: benchmark_reproducibility.rs
prototype/crates/starglyph-cli/: Cargo.toml
prototype/crates/starglyph-cli/src/: eval_cmd.rs  main.rs
prototype/crates/starglyph-core/: Cargo.toml
prototype/crates/starglyph-core/src/: catalog.rs  constellations.rs  contracts.rs  detect.rs  engine.rs  ephem.rs  eval.rs  geom.rs  image_input.rs  lib.rs  overlay.rs  render.rs  solve.rs
prototype/crates/starglyph-serve/: Cargo.toml
prototype/crates/starglyph-serve/src/: main.rs  pool.rs  server.rs  telemetry.rs
prototype/eval/: README.md  baseline-ci.json
scripts/: docker-smoke.sh  fetch-hyg-catalog.sh  mag-sweep.sh  serve-smoke.sh  telemetry-rollup.py
(+13 files in other folders)
