[package]
name = "simulator-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono = "0.4.44"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }
rand = "0.9.4"
rand_chacha = "0.9.0"
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
sha2 = "0.10.9"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
