[package]
name = "solver-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
csv.workspace = true
image.workspace = true
nalgebra.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
simulator-core = { path = "../simulator-core" }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
