[package]
name = "starglyph-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
csv.workspace = true
flate2.workspace = true
image.workspace = true
kamadak-exif.workspace = true
nalgebra.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tetra3.workspace = true
thiserror.workspace = true
vsop87.workspace = true

[dev-dependencies]
simulator-core = { path = "../simulator-core" }
tempfile.workspace = true
