[package]
name = "starglyph-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless HTTP plate-solve service over starglyph-core"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
starglyph-core = { path = "../starglyph-core" }
tokio.workspace = true

[dev-dependencies]
http-body-util = "0.1"
image.workspace = true
tower = { version = "0.5", features = ["util"] }
